--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ var requiredRevision = 0;
 
 <body>
 <center>
-<object width="800" height="600" data="webmain.swf"></object>
+<object width="800" height="600" data="Anomaly.swf"></object>
 </center>
 </body>
 </html>
